--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/militonya/nuw-projekt/issues"
   },
-  "homepage": "https://github.com/militonya/nuw-projekt#readme"
+  "homepage": "https://github.com/militonya/nuw-projekt#readme",
+  "dependencies": {
+    "sass": "^1.57.1"
+  }
 }
