--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "compile": "sass ./:./",
     "watch": "sass -w ./:./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
