--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
-  "name": "nuw-projekt",
+  "name": "my-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "sass ./:./",
-    "watch": "sass -w ./:./",
+    "turbo": "sass -w ./:./",
+    "biturbo":"sass ./:./",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/militonya/nuw-projekt.git"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/militonya/nuw-projekt/issues"
-  },
-  "homepage": "https://github.com/militonya/nuw-projekt#readme",
   "dependencies": {
     "sass": "^1.57.1"
   }
